--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.3"
   }
 }
